--- a/simulation.css
+++ b/simulation.css
@@ -21,6 +21,7 @@
     --base-100: #ffffff;
     --background-main: #0078D7;
     --accent-red: #ef5d5d;
+    --accent-darkred: #b23131;
     --accent-green: #559e48;
     --accent-yellow: #d7c02c;
 }
@@ -38,6 +39,16 @@ c-yellow {
 }
 
 /* animation */
+@keyframes smile {
+    0% {transform: none;}
+    100% {transform: rotateY(180deg);}
+}
+
+@keyframes bg {
+    0% {background-color: var(--background-main);}
+    100% {background-color: var(--accent-darkred);}
+}
+
 @keyframes print {
     0% {visibility: hidden; height: 0;}
     100% {visibility: visible; height: 100%;}
@@ -75,12 +86,38 @@ body > div, #phase-2 p {
     line-height: 1.75rem;
 }
 
+.wrapper {
+    max-width: 1600px;
+    padding: 4rem;
+    margin: 0 auto;
+    overflow: hidden;
+}
+
 /* phase 1 */
 #phase-1 {
-    background-color: blue;
+    background-color: var(--background-main);
     width: 100%;
     height: 100%;
-    animation: clear 0s 10s forwards;
+    animation: clear 0s 10s forwards, bg 2s ease-in-out 7s forwards;
+}
+
+#smile h1 {
+    display: inline-block;
+    color: var(--base-90);
+    font-size: 10rem;
+    font-weight: 300;
+}
+
+#warning p {
+    max-width: 53rem;
+    margin-top: 2rem;
+    color: var(--base-90);
+    font-size: 2rem;
+    font-weight: 300;
+}
+
+#smile h1:nth-child(2) {
+    animation: smile 3s ease-in-out 4s forwards;
 }
 
 /* phase 2 */
@@ -89,13 +126,6 @@ body > div, #phase-2 p {
     height: 0;
     background-color: var(--base-10);
     animation: print 0s 10s forwards;
-}
-
-#phase-2 .wrapper {
-    max-width: 1600px;
-    padding: 4rem;
-    margin: 0 auto;
-    overflow: hidden;
 }
 
 /* line 1 */
