--- a/simulation.css
+++ b/simulation.css
@@ -19,7 +19,9 @@
     --base-70: #dddddd;
     --base-90: #f8f8f8;
     --base-100: #ffffff;
+    --base-100-rgb: 255 255 255;
     --background-main: #0078D7;
+    --background-main-rgb: 0 120 215;
     --accent-red: #ef5d5d;
     --accent-darkred: #b23131;
     --accent-green: #559e48;
@@ -39,6 +41,16 @@ c-yellow {
 }
 
 /* animation */
+@keyframes cursor {
+    0% {bottom: 4rem; right: 4rem;}
+    100% {bottom: 50%; right: 50%;}
+}
+
+@keyframes click {
+    0% {background-color: transparent; border: none}
+    100% {padding: 1rem; background-color: rgb(var(--background-main-rgb) / 0.3); border: 2px solid var(--background-main);}    
+}
+
 @keyframes smile {
     0% {transform: none;}
     100% {transform: rotateY(180deg);}
@@ -70,16 +82,16 @@ body {
     height: 100vh;
 }
 
-body > div, #phase-2 p {
+body > div, #phase-3 p {
     overflow: hidden;
 }
 
-#phase-2 .wrapper div {
+#phase-3 .wrapper div {
     overflow: hidden;
     margin-bottom: 1.75rem;
 }
 
-#phase-2 p {
+#phase-3 p {
     font-family: 'Source Code Pro', serif;
     height: 0;
     color: var(--base-90);
@@ -95,10 +107,63 @@ body > div, #phase-2 p {
 
 /* phase 1 */
 #phase-1 {
-    background-color: var(--background-main);
     width: 100%;
     height: 100%;
-    animation: clear 0s 10s forwards, bg 2s ease-in-out 7s forwards;
+    animation: clear 0s 10s forwards;
+}
+
+#desktop {
+    height: 100%;
+    background-image: url("/attachments/background.jpg");
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#desktop div {
+    box-sizing: content-box;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    animation: click 0s 8s forwards;
+}
+
+#desktop div img {
+    width: 3rem;
+}
+
+#desktop > img {
+    width: 0.8rem;
+    position: absolute;
+    bottom: 4rem;
+    right: 4rem;
+    animation: cursor 3s cubic-bezier(.58,.06,.69,1.06) 3s forwards, clear 0s 10s forwards;
+}
+
+#desktop p {
+    color: var(--base-100);
+    font-size: 0.8rem;
+    text-shadow: 2px 2px 2px var(--base-00);
+}
+
+#taskbar {
+    width: 100%;
+    height: 3.5rem;
+    background-color: rgb(var(--base-100-rgb) / 0.6);
+    backdrop-filter: blur(20px);
+    position: absolute;
+    bottom: 0;
+    animation: clear 0s 10s forwards;
+}
+
+/* phase 2 */
+#phase-2 {
+    background-color: var(--background-main);
+    width: 100%;
+    height: 0;
+    animation: print 0s 10s forwards, clear 0s 20s forwards, bg 2s ease-in-out 17s forwards;
 }
 
 #smile h1 {
@@ -117,15 +182,15 @@ body > div, #phase-2 p {
 }
 
 #smile h1:nth-child(2) {
-    animation: smile 3s ease-in-out 4s forwards;
+    animation: smile 3s ease-in-out 14s forwards;
 }
 
-/* phase 2 */
-#phase-2 {
+/* phase 3 */
+#phase-3 {
     width: 100%;
     height: 0;
     background-color: var(--base-10);
-    animation: print 0s 10s forwards;
+    animation: print 0s 20s forwards;
 }
 
 /* line 1 */
@@ -134,7 +199,7 @@ body > div, #phase-2 p {
 }
 
 #line-1 p {
-    animation: print 15s steps(5, end) 10s forwards;
+    animation: print 15s steps(5, end) 20s forwards;
 }
 
 /* line 2 */
@@ -143,40 +208,40 @@ body > div, #phase-2 p {
 }
 
 #line-2 p:nth-child(1) {
-    animation: overwrite 4s steps(1, end) 26s forwards;
-}
-
-#line-2 p:nth-child(2) {
-    animation: overwrite 4s steps(1, end) 28s forwards;
-}
-
-#line-2 p:nth-child(3) {
-    animation: overwrite 4s steps(1, end) 30s forwards;
-}
-
-#line-2 p:nth-child(4) {
-    animation: overwrite 4s steps(1, end) 32s forwards;
-}
-
-#line-2 p:nth-child(5) {
-    animation: overwrite 4s steps(1, end) 34s forwards;
-}
-
-#line-2 p:nth-child(6) {
     animation: overwrite 4s steps(1, end) 36s forwards;
 }
 
+#line-2 p:nth-child(2) {
+    animation: overwrite 4s steps(1, end) 38s forwards;
+}
+
+#line-2 p:nth-child(3) {
+    animation: overwrite 4s steps(1, end) 40s forwards;
+}
+
+#line-2 p:nth-child(4) {
+    animation: overwrite 4s steps(1, end) 42s forwards;
+}
+
+#line-2 p:nth-child(5) {
+    animation: overwrite 4s steps(1, end) 44s forwards;
+}
+
+#line-2 p:nth-child(6) {
+    animation: overwrite 4s steps(1, end) 46s forwards;
+}
+
 #line-2 p:nth-child(7) {
-    animation: overwrite 6s steps(1, end) 37s forwards;
+    animation: overwrite 6s steps(1, end) 47s forwards;
 }
 
 #line-2 p:nth-child(8) {
-    animation: overwrite 6s steps(1, end) 40s forwards;
+    animation: overwrite 6s steps(1, end) 50s forwards;
 }
 
 /* line 3 */
 #line-1, #line-2 {
-    animation: clear 0s 46s forwards;
+    animation: clear 0s 56s forwards;
 }
 
 #line-3 {
@@ -184,12 +249,12 @@ body > div, #phase-2 p {
 }
 
 #line-3 p {
-    animation: print 6s steps(2, start) 46s forwards; 
+    animation: print 6s steps(2, start) 56s forwards; 
 }
 
 /* line 4 */
 #line-3 {
-    animation: clear 0s 53s forwards;
+    animation: clear 0s 63s forwards;
 }
 
 #line-4 {
@@ -198,7 +263,7 @@ body > div, #phase-2 p {
 
 #line-4 p {
     white-space: pre;
-    animation: print 4s steps(8, start) 53s forwards;
+    animation: print 4s steps(8, start) 63s forwards;
 }
 
 /* line 5, 6 */
@@ -207,16 +272,16 @@ body > div, #phase-2 p {
 }
 
 #line-5 p {
-    animation: print 10s steps(5, end) 58s forwards;
+    animation: print 10s steps(5, end) 68s forwards;
 }
 
 #line-6 p {
-    animation: print 5s steps(5, end) 68s forwards;
+    animation: print 5s steps(5, end) 78s forwards;
 }
 
 /* line-7 */
 #line-4, #line-5, #line-6 {
-    animation: clear 0s 74s forwards;
+    animation: clear 0s 84s forwards;
 }
 
 #line-7 {
@@ -224,7 +289,7 @@ body > div, #phase-2 p {
 }
 
 #line-7 p {
-    animation: print 4s steps(2, end) 74s forwards;
+    animation: print 4s steps(2, end) 84s forwards;
 }
 
 #line-7 a {
